--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.obrii.mit.dp2021.kukhta</groupId>
     <artifactId>KukhtaProject</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <name>KukhtaProject</name>
