--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>UserDataServlet</servlet-name>
-        <servlet-class>org.obrii.mit.dp2021.kukhta.kukhtaproject.CRUD.UserDataServlet</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>FormUD</servlet-name>
-        <servlet-class>org.obrii.mit.dp2021.kukhta.kukhtaproject.CRUD.FormUD</servlet-class>
+        <servlet-name>DataServlet</servlet-name>
+        <servlet-class>org.obrii.mit.dp2021.kukhta.kukhtaproject.DataServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>UserDataServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>FormUD</servlet-name>
-        <url-pattern>/form</url-pattern>
+        <servlet-name>DataServlet</servlet-name>
+        <url-pattern/>
     </servlet-mapping>
     <session-config>
         <session-timeout>
